--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>org.estatio</groupId>
-  <artifactId>nuxeo-uploader-ecp</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>nuxeo-uploader-ecp</name>
-  <url>http://maven.apache.org</url>
-
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.estatio</groupId>
+	<artifactId>nuxeo-uploader-ecp</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>nuxeo-uploader-ecp</name>
+	<description>Nuxeo uploader</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -22,19 +19,19 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-	    <groupId>org.nuxeo.ecm.automation</groupId>
-	    <artifactId>nuxeo-automation-client</artifactId>
-	    <version>5.9.4</version>
+		<groupId>org.nuxeo.ecm.automation</groupId>
+		<artifactId>nuxeo-automation-client</artifactId>
+		<version>5.9.4</version>
 	</dependency>
 	<dependency>
-	    <groupId>org.apache.poi</groupId>
-	    <artifactId>poi</artifactId>
-	    <version>3.10-FINAL</version>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi</artifactId>
+		<version>3.10-FINAL</version>
 	</dependency>
 	<dependency>
-	    <groupId>org.apache.poi</groupId>
-	    <artifactId>poi-ooxml</artifactId>
-	    <version>3.10-FINAL</version>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+		<version>3.10-FINAL</version>
 	</dependency>
 	<dependency>
 		<groupId>joda-time</groupId>
@@ -48,8 +45,8 @@
 	</dependency>
   </dependencies>
   <repositories>
-	  <repository>
-	    <id>public</id>
+	<repository>
+		<id>public</id>
 	    <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
 	    <releases>
 	      <enabled>true</enabled>
